Update Hierarchical Clustering - Auto_Insurance data.ipynb

--- a/Autoinsurance/Hierarchical Clustering - Auto_Insurance data.ipynb
+++ b/Autoinsurance/Hierarchical Clustering - Auto_Insurance data.ipynb
@@ -5,7 +5,7 @@
    "id": "9ef60dea",
    "metadata": {},
    "source": [
-    "**HIERARCHICAL CLUSTERING!! - 360DIGITMG**\n",
+    "**HIERARCHICAL CLUSTERING!!**\n",
     "\n",
     "Clustering algorithms are unsupervised machine learning algorithms so there is no label associated with data points.\n",
     "Clustering algorithms look for similarities or dissimilarities among data points so that similar ones can be grouped together.\n",
@@ -24,7 +24,7 @@
    "id": "8358c469",
    "metadata": {},
    "source": [
-    "# Clustering problem 4:\n",
+    " problem statement:\n",
     "    Perform clustering on mixed data. Convert the categorical variables to numeric by using dummies or label encoding and \n",
     "    perform normalization techniques. The data set consists of details of customers related to their auto insurance.\n",
     "    Refer to Autoinsurance.csv dataset."
