Update Hierarchical Clustering - Auto_Insurance data.ipynb

--- a/Autoinsurance/Hierarchical Clustering - Auto_Insurance data.ipynb
+++ b/Autoinsurance/Hierarchical Clustering - Auto_Insurance data.ipynb
@@ -24,7 +24,7 @@
    "id": "8358c469",
    "metadata": {},
    "source": [
-    " problem statement:\n",
+    " *problem statement:*\n",
     "    Perform clustering on mixed data. Convert the categorical variables to numeric by using dummies or label encoding and \n",
     "    perform normalization techniques. The data set consists of details of customers related to their auto insurance.\n",
     "    Refer to Autoinsurance.csv dataset."
