--- a/EastWestAirlines/EastWestAirlines_data.ipynb
+++ b/EastWestAirlines/EastWestAirlines_data.ipynb
@@ -5,7 +5,7 @@
    "id": "1466940a",
    "metadata": {},
    "source": [
-    "# HIERARCHICAL CLUSTERING\n",
+    "### HIERARCHICAL CLUSTERING\n",
     "\n",
     "Clustering algorithms are unsupervised machine learning algorithms so there is no label associated with data points.\n",
     "Clustering algorithms look for similarities or dissimilarities among data points so that similar ones can be grouped together.\n",
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Clustering problem 1:\n",
+    "### Clustering problem 1:\n",
     "    Perform clustering for the airlines data to obtain optimum number of clusters. Draw the inferences from the clusters \n",
     "    obtained. Refer to EastWestAirlines.xlsx dataset."
    ]
