Update Hierarchical Clustering - Telco Customer Churn.ipynb

--- a/Telco_cust_churn/Hierarchical Clustering - Telco Customer Churn.ipynb
+++ b/Telco_cust_churn/Hierarchical Clustering - Telco Customer Churn.ipynb
@@ -6,7 +6,7 @@
     "id": "N751yDMq7Uoj"
    },
    "source": [
-    "**HIERARCHICAL CLUSTERING!! - 360DIGITMG**\n",
+    "**HIERARCHICAL CLUSTERING!!**\n",
     "\n",
     "Clustering algorithms are unsupervised machine learning algorithms so there is no label associated with data points.\n",
     "Clustering algorithms look for similarities or dissimilarities among data points so that similar ones can be grouped together.\n",
